# Sui-architecture

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md  USAGE.md
crates/aws-nautilus-sdk/: Cargo.toml
crates/aws-nautilus-sdk/src/: lib.rs
crates/checkpoint/: Cargo.toml
crates/checkpoint/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  messages.rs  object.rs  transaction.rs
crates/effects/: Cargo.toml
crates/effects/src/: lib.rs
crates/locking/: Cargo.toml
crates/locking/src/: lib.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs
crates/precheck/: Cargo.toml
crates/precheck/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/validator/: Cargo.toml
crates/validator/examples/: complete_example.rs
crates/validator/src/: lib.rs
crates/vm/: Cargo.toml
crates/vm/src/: lib.rs
examples/: complete_example.rs  validator_demo.rs
nautilus/enclave/: Cargo.toml
nautilus/enclave/src/: lib.rs  main.rs
nautilus/host/: Cargo.toml
nautilus/host/src/: main.rs
nautilus/shared/: Cargo.toml
nautilus/shared/src/: lib.rs
