[package]
name = "sui-network"
version = "0.1.0"
edition = "2021"

[dependencies]
sui-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"

